[package]
name = "leetcode_datahouse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
shellwords = "1.1.0"
fred = "5.2.0"
config = "0.13.2"
diesel = { version = "2.0.2", features = ["postgres"]}
dotenvy = "0.15.6"
serde_json = "1.0.95"
nutype = "0.1.1"
