[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
fred = "7.0.0"
log = "0.4.20"
tokio = { version = "1.33.0", features = ["macros"] }
configs = {path = "../configs"}
redis = { path = "../redis" }
queues = { path = "../queues"}
errors = { path = "../errors" }
consts = { path = "../consts" }
serde_json = "1.0.108"
diesel = {version = "2.1.3", features = ["postgres"]}
models = { path = "../models" }
