[package]
name = "producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
reqwest    = { version = "0.11", features = [ "json" ] }
serde      = { version = "1.0", features = [ "derive" ] }
tokio      = { version = "1", features = [ "full" ] }
shellwords = "1.1.0"
thiserror = "1.0.49"
grpc = {path = "../grpc"}
errors = {path = "../errors"}
error-stack = "0.4.1"
